<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_myprofile"
            android:icon="@drawable/ic_camera_front_black_24dp"
            android:title="@string/menu_myProfile" />
        <item
            android:visible="true"
            android:id="@+id/nav_arbreadcrumbs"
            android:icon="@drawable/ic_person_pin_black_24dp"
            android:title="@string/menu_breadcrumbs" />
        <item
            android:visible="true"
            android:id="@+id/nav_horizonstats"
            android:icon="@drawable/ic_poll_black_24dp"
            android:title="@string/menu_horizonStats" />

        <item
            android:id="@+id/nav_appinfo"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/menu_info" />

        <item
            android:id="@+id/menu_none"
            android:title=""
            android:visible="false"/>


    </group>

</menu>
