<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="iot.empiaurhouse.horizonar.LoaderActivity"
    android:id="@+id/loader_activity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/launchbackground"

    xmlns:android="http://schemas.android.com/apk/res/android">





    <ImageView
        android:transitionName="horizonLogo"
        android:layout_marginTop="53dp"
        android:id="@+id/horizonLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/horizonapplogo"
        android:visibility="visible"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_marginTop="33dp"
        android:id="@+id/horizonLogoText"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/logo_text"
        android:textSize="34sp"
        android:textColor="@color/white"
        android:fontFamily="@font/cinzelbold"


        />

    <TextView
        android:id="@+id/horizonLogoSubText"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/logo_subtext"
        android:textSize="23sp"
        android:textColor="@color/white"
        android:fontFamily="@font/montserratregular"

        />













</LinearLayout>